Splitted TrainingActivity into Training and RoundActivity Restructured Scoreboard and Statistics Added FileProvider to overcome security exception in API 24